# rs-ipc

./: Cargo.toml  README.md
src/: lib.rs
src/platform/unix/: message_queue.rs  mod.rs  unix_sock_seqpacket.rs  unix_sock_stream.rs
src/platform/windows/: mod.rs  one_way.rs  two_way.rs
